2012-11-28  Per Bothner  <per@bothner.com>

	* ByteVector.java (getBuffer): Change return type to public,
	to support open-input-bytevector.

2012-11-27  Per Bothner  <per@bothner.com>

	* U8Vector.java: New constructor.
	(writeTo): Move to super-class.
	* ByteVector.java (writeTo): New method, moved from U8Vector.
	(copyFrom, readFrom): New methods.

2012-11-22  Per Bothner  <per@bothner.com>

	* U8Vector.java (writeTo): New method.

2012-11-20  Per Bothner  <per@bothner.com>

	* FString.java (<init>): Add constructor taking StringBuilder,
	in addition to ones taking StringBuffer.

	* FVector.java (setAll):  Rename to ...
	(fill): and add optional range parameters.

	* SimpleVector.java: Also implement RandomAccess.

2012-06-08  Per Bothner  <per@bothner.com>

	* LList.java (toString): Use getCar/getCdr instead of car/cdr.

2012-01-19  Per Bothner  <per@bothner.com>

	* LList.java (listRef): Remove method - reimplemented in Scheme.

2011-12-19  Per Bothner  <per@bothner.com>

	* U8Vector.java (<init>): Add copy constructors.
	(toUtf8): New method.

2011-07-11  Per Bothner  <per@bothner.com>

	* ConstVector.java (<init>): New default constructor.
	(setDataBackDoor): New method used by LispReader.
	* Pair.java (setCarBackdoor): New method used by LispReader.

2011-04-25  Charles Turner <chturne@gmail.com>
	    Per Bothner  <per@bothner.com>

	* LList.java: Give a class identity to the Empty field
	for type information
	* EmptyList.java (new): New class that identifies empty lists.
	* Makefile.am: Update accordingly.

2011-04-15  Per Bothner  <per@bothner.com>

	* SimpleVector.java (add): Fix off-by-one bug, reported by Jamison Hope.

2011-01-03  Per Bothner  <per@bothner.com>

	* SimpleVector.java (checkCanWrite): New method.
	Call checkCanWrite before any mutation.
	* FVector.java: Likewise call checkCanWrite before any mutation.
	* ConstVector.java: New class, extends FVector.
	(checkCanWrite): Override to throw exception.
	* Makefile.am: Update.
