@@ -1,3 +1,8 @@
+2012-11-29  Per Bothner  <per@bothner.com>
+
+	* standard/Scheme.java (initScheme): New R7RS vector functions
+	vector-copy and vector-copy!.
+
 2012-11-28  Per Bothner  <per@bothner.com>
 
 	* standard/Scheme.java (initScheme): New R7RS port functions
