@@ -1,3 +1,7 @@
+2012-11-29  Per Bothner  <per@bothner.com>
+
+	* FVector.java (copyFrom): New method.
+
 2012-11-28  Per Bothner  <per@bothner.com>
 
 	* ByteVector.java (getBuffer): Change return type to public,
